objects/SFDC_Project__c.object
<CustomObject>
    <description>プロジェクト管理用オブジェクト</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>プロジェクト</relationshipLabel>
        <relationshipName>R00N10000000JDD1EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>プロジェクト</relationshipLabel>
        <relationshipName>R00N10000000JDD2EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商談</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>プロジェクト</relationshipLabel>
        <relationshipName>R00N10000000JDCyEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Days_Remaining__c</fullName>
        <formula>SFDC_Project_End_Date__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Duration__c</fullName>
        <formula>SFDC_Project_End_Date__c  -  SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>期間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_End_Date__c</fullName>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プロジェクトマネージャ</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>プロジェクト</relationshipLabel>
        <relationshipName>R00N10000000JDD7EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Name__c</fullName>
        <description>プロジェクト名称</description>
        <label>プロジェクト名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Start_Date__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>計画中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>進行中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>完了</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Status_Description__c</fullName>
        <label>状況（詳細）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>project_detail__c</fullName>
        <label>プロジェクト（詳細）</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>プロジェクト</label>
    <listViews>
        <fullName>View</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>プロジェクト番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>